reference_deployment/kubernetes/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    meta.helm.sh/release-name: "aws-load-balancer-controller"
    meta.helm.sh/release-namespace: "kube-system"
  labels:
    app.kubernetes.io/managed-by: "Helm"
spec:
  controller: ingress.k8s.aws/alb
