reference_deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: petstore
spec:
  selector:
    app: petstore
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
